--- a/jrssb_formatted/hillclimbing_statsoc.tex
+++ b/jrssb_formatted/hillclimbing_statsoc.tex
@@ -42,15 +42,10 @@
 \usepackage{microtype}
 \DisableLigatures[f]{encoding = *, family = * }
 
-% subcaptions
-%\usepackage{subcaption}
-
 % for the beautiful checkmarks
 \usepackage{pifont}
 
 \newtheorem{theorem}{Theorem}
-\newtheorem{corollary}{Corollary}
-\newtheorem{lemma}{Lemma}
 \newtheorem{definition}{Definition}
 \newtheorem{condition}{Condition}
 
@@ -162,7 +157,6 @@ First we consider the simple case where $L_T\left(\boldsymbol \theta, \boldsymbo
 \end{algorithmic}
 \end{algorithm}
 There are a number of potential ways to choose the step-size $t^{(k)}$. Choice of step-size is discussed further in Section~\ref{sec:alg_details}.
-% --- two simple options are fixed size $t^{(k)} = t$ and harmonically decreasing $t^{(k)} = t/k$.\\
 \vspace{1mm}
 
 \noindent
@@ -179,18 +173,16 @@ The gradient can be found using the chain rule:
 The first term, $\frac{\partial}{\partial \boldsymbol \theta} L ( \boldsymbol{y}_V, f_{\boldsymbol \theta}(\boldsymbol{X}_V))$, is problem specific, but generally straightforward to calculate. To calculate the second term, $\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol \theta}(\boldsymbol{\lambda})$, we note that $\hat{\boldsymbol \theta}(\boldsymbol{\lambda})$ minimizes \eqref{train}. Since \eqref{train} is smooth,
 \begin{equation}
 \nabla_\theta 
-\left . \left (
-L(\boldsymbol{y}_T, f_{\boldsymbol \theta} (\boldsymbol{X}_T)) +
-\sum\limits_{i=1}^J \lambda_i P_i(\boldsymbol \theta)
-\right ) \right |_{\boldsymbol \theta = \hat {\boldsymbol \theta}(\boldsymbol{\lambda})}
+L_T(\boldsymbol \theta, \boldsymbol{\lambda})
+|_{\boldsymbol \theta = \hat {\boldsymbol \theta}(\boldsymbol{\lambda})}
 = \boldsymbol{0}.
 \label{eq:grad}
 \end{equation}
 Taking the derivative of both sides of \eqref{eq:grad} in $\boldsymbol{\lambda}$ and solving for $\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol \theta}(\boldsymbol{\lambda})$, we get:
 \begin{equation}
 \frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol \theta}(\boldsymbol{\lambda}) = 
-- \left . \left [ \left [
- \nabla_\theta^2 \left (  L \left (\boldsymbol{y}_T, f_{\boldsymbol \theta} (\boldsymbol{X}_T) \right)  +  \sum\limits_{i=1}^J \lambda_i P_i(\boldsymbol \theta)  \right )  \right ]^{-1}
+- \left . \left [
+ \nabla_\theta^2 L_T (\boldsymbol \theta, \boldsymbol{\lambda} )^{-1}
 \nabla_{\boldsymbol \theta} P(\boldsymbol \theta)
 \right ]
 \right |_{\boldsymbol \theta = \hat {\boldsymbol \theta}(\boldsymbol{\lambda})}
@@ -289,8 +281,7 @@ We can therefore construct a gradient descent procedure based on the model param
 \min_{\boldsymbol \lambda \in \Lambda} L(\boldsymbol y_V, f_{\boldsymbol U \hat{\boldsymbol \beta} (\boldsymbol \lambda) }(\boldsymbol X_V)) \\
 \text{s.t. } \hat{\boldsymbol \beta} (\boldsymbol \lambda) =
 \argmin_{\boldsymbol \beta}
-L(\boldsymbol y_T, f_{\boldsymbol U \boldsymbol \beta}(\boldsymbol X_T))
-+ \sum\limits_{i=1}^J \lambda_i P_i(\boldsymbol U \boldsymbol \beta)
+L_T (\boldsymbol U \boldsymbol \beta, \boldsymbol{\lambda} )
 \end{array}
 \end{equation}
 
@@ -323,21 +314,20 @@ Note that because the differentiable space is a local optimality space and is th
                             \min_{\boldsymbol \lambda \in \Lambda} L(\boldsymbol y_V, f_{\boldsymbol U^{(k)} \hat{\boldsymbol \beta} (\boldsymbol \lambda) }(\boldsymbol X_V)) \\
                             \text{s.t. } \hat{\boldsymbol \beta} (\boldsymbol \lambda) =
                             \argmin_{\boldsymbol \beta}
-                            L(\boldsymbol y_T, f_{\boldsymbol U^{(k)} \boldsymbol \beta}(\boldsymbol X_T))
-                            + \sum\limits_{i=1}^J \lambda_i P_i(\boldsymbol U^{(k)} \boldsymbol \beta)
+                            L_T (\boldsymbol U^{(k)}\boldsymbol \beta, \boldsymbol{\lambda} )
                             \end{array}
                             \end{equation*}
 		}              
               	\STATE{
-			Calculate $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})$ is
+			Calculate $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda})|_{\boldsymbol{\lambda} = \boldsymbol{\lambda}^{(k)}}$ where 
                                \begin{equation*}
-                    		-  \left . \left [
-                    		_{\boldsymbol U^{(k)}}\nabla^2 \left (
-                    			 L(\boldsymbol{y}_T, f_{\boldsymbol U^{(k)}\boldsymbol \beta} (\boldsymbol{X}_T))  + 
-                    			 \sum\limits_{i=1}^J \lambda_i P_i(\boldsymbol U^{(k)}\boldsymbol \beta)
-                    		\right )
-                    		\right ]^{-1}
-                    		_{\boldsymbol U^{(k)}}\nabla P(\boldsymbol U^{(k)}\boldsymbol \beta)
+                               \frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol \beta}(\boldsymbol{\lambda}) =
+                    		-  \left . \left[
+				\left (
+                    		_{\boldsymbol U^{(k)}}\nabla^2 L_T (\boldsymbol U^{(k)}\boldsymbol \beta, \boldsymbol{\lambda} )
+                    		\right )^{-1}
+                    		{}_{\boldsymbol U^{(k)}}\nabla P(\boldsymbol U^{(k)}\boldsymbol \beta)
+				\right ]
                     		\right |_{\boldsymbol \beta =  \hat{\boldsymbol \beta}(\boldsymbol \lambda)}
                                \end{equation*}
 			with $_{\boldsymbol U^{(k)}}\nabla^2$ and $_{\boldsymbol U^{(k)}}\nabla$ are as defined in \eqref{eq:hess}.
@@ -371,13 +361,12 @@ Note that because the differentiable space is a local optimality space and is th
   \end{algorithmic}
 \end{algorithm}
 
-Thus far, we have restricted our attention to joint optimization for training/validation splits. Refer to the Appendix for how to perform joint optimization for $K$-fold cross validation.
+Thus far we have restricted our attention to joint optimization for training/validation splits. Joint optimization for $K$-fold cross validation is described in the Appendix.
 
 \subsection{Examples}\label{exampleSection}
 
 To better understand the proposed gradient descent procedure, we present example joint optimization problems and their corresponding gradient calculations. We start with ridge regression where the training criterion is smooth. Then we consider examples where the training criterions are nonsmooth, but $\hat{\boldsymbol \theta}(\boldsymbol\lambda)$ is smooth almost everywhere.
 
-% $S_{\boldsymbol{\lambda}}$ for each regression example is specified in Table~\ref{table:differentiableSpace} for reference. 
 For ease of notation, we will let $S_{\boldsymbol{\lambda}}$ denote the differentiable space of $L_T(\cdot, \boldsymbol{\lambda})$ at $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$. All the example regressions satisfy the conditions in Theorem~\ref{thethrm}; details are included in the Appendix. Note that in some examples below, we add a ridge penalty with a fixed small coefficient $\epsilon > 0$ to ensure that the training criterion is strictly convex.
 
 \subsubsection{Ridge Regression}
@@ -486,21 +475,6 @@ To calculate the gradient, we define the locally equivalent joint optimization p
 \end{array}
 \end{equation}
 
-%%%%%% Assume the lovely reader can do math so we dont need to show them this line?
-%Since the training criterion is now smooth, we can take the gradient and set it to zero:
-%\begin{equation}
-%-\frac{1}{n} \boldsymbol{X}_{T, I(\boldsymbol\lambda)}^\top(\boldsymbol{y}_T - \boldsymbol{X}_{T, I(\boldsymbol\lambda)} \hat{\boldsymbol\beta}(\boldsymbol \lambda))
-%+ \lambda_1
-%\begin{bmatrix}
-%\frac{\hat{\boldsymbol{\beta}}^{(1)} (\boldsymbol \lambda)}{||\hat{\boldsymbol{\beta}}^{(1)} (\boldsymbol \lambda)||_2}\\
-%...\\
-%\frac{\hat{\boldsymbol\beta}^{(M)}(\boldsymbol \lambda)}{||\hat{\boldsymbol{\beta}}^{(M)} (\boldsymbol \lambda)||_2}
-%\end{bmatrix}
-%+ \lambda_2 sgn(\hat{\boldsymbol\beta}(\boldsymbol \lambda))
-%+ \epsilon \hat{\boldsymbol\beta}(\boldsymbol \lambda)
-%= 0
-%\end{equation}
-
 From \eqref{implicitDifferentiation} and the chain rule, we get that the gradient of the validation loss is:
 \begin{equation}
 \nabla_{\boldsymbol \lambda} L(\boldsymbol{y_V}, f_{\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})}(\boldsymbol{X_V})) =
@@ -568,277 +542,9 @@ Let $\boldsymbol{Z}_T \in \mathbb{R}^{|T| \times q}, \boldsymbol{Z}_V \in \mathb
 
 The matrix $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ gives the second-order differences between the estimates of $f_i$ for unevenly-spaced inputs. Construction of $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ is given in the Appendix. Note that the nonlinear covariates $\boldsymbol X$ from the training and validation sets are incorporated into the matrices $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ in order to estimate $f_i$ at all $\boldsymbol X$ values.
 
-The formulation in \ref{aplmProblem} is given in a very general form. In the following sections, we will consider special cases of this regression, such as pooling certain $\lambda_i$s and removing the parametric component entirely.
+The formulation in \eqref{aplmProblem} is given in a very general form. In the following sections we will consider special cases of this regression, such as pooling certain $\lambda_i$'s and removing the parametric component altogether.
 
 The gradient derivation is given in the Appendix. The logic is the same as the other examples.
-
-
-%\subsubsection{Additive models OLD}\label{sec:additive}
-%Finally, consider modeling response $y$ with an additive model composed of $p$ univariate functions
-%\begin{equation}
-%y = \sum_{i=1}^p f_i(x_i) + \epsilon
-%\end{equation}
-%We are interested in obtaining estimates $\boldsymbol{\theta}_i \in \mathbb{R}^n$ for $f_i(x_{i1}), f_i(x_{i2}), ..., f_i(x_{isn})$. Let us first consider the nonparametric setting. We are interested in smooth estimates $\boldsymbol{\theta}_i$, so we will penalize second-order differences using a Hodrick-Prescott (H-P) filter. 
-%
-%To formalize our optimization problem we give a bit of notation. Let $X \in \mathbb{R}^{n \times p}$ be the design matrix. Let the first $|T|$ observations be from the training set and the last $|V|$ observations be from the validation set. Let $\boldsymbol{I}_T$ as the first $|T|$ rows and $\boldsymbol{I}_V$ as the last $|V|$ rows of an $n\times n$ identity matrix.
-%
-%The joint optimization problem is
-%\begin{equation}
-%\begin{array}{c}
-%\min_{\boldsymbol{\lambda} \in \mathbb{R}^P_+} \frac{1}{2} \left \| y_V - \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}) \right \|^2_2 \\
-%\hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}) = 
-%\min_{\boldsymbol{\theta}^{(i)} \in \mathbb{R}^n} \frac{1}{2} \left \| \boldsymbol{y}_T
-%- \boldsymbol{I}_T \sum_{i=1}^p \boldsymbol{\theta}^{(i)} \right \|^2_2
-%+ \frac{1}{2} \sum_{i=1}^p \lambda_i \left \| \boldsymbol{D}^{(2)}_{\boldsymbol{x}_i} \boldsymbol{\theta}^{(i)} \right \|_2^2
-%+ \epsilon \| \boldsymbol{\theta} \|_2^2
-%\end{array}
-%\end{equation}
-%
-%The matrix $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ gives the second-order differences between the nonparametric estimates of $f_i$. Let the $n$ observations be ordered according to the $i$th covariate such that $x_{ik_1} \le x_{ik_2} \le ... \le x_{ik_n}$. $\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i} \in \mathbb{R}^{n \times n}$ is the corresponding first-order difference matrix; so row $j=1,...,n-1$ of $\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i}$ has a -1 in position $k_{j}$, 1 in position $k_{j+1}$, and 0 elsewhere and row $n$ is all zeros. Then $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ is
-%\begin{equation}
-%\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i} \cdot
-%\text{diag} \left ( \frac{1}{x_{ik_2} - x_{ik_1}}, \frac{1}{x_{ik_3} - x_{ik_2}}, ... , \frac{1}{x_{ik_n} - x_{ik_{n-1}}}, 0 \right )
-%\cdot \boldsymbol{D}^{(1)}_{\boldsymbol{x}_i}
-%\end{equation}
-%
-%If instead we are interested in modeling $y$ using a semiparametric approach, we may consider an additive partially linear model (APLM) instead. In this case, consider another set of covariates $z \in \mathbb{R}^q$ such that
-%\begin{equation}
-%y = \sum_{i=1}^p f_i(x_i) + \boldsymbol{\beta}^\top \boldsymbol z  + \epsilon
-%\end{equation}
-%
-%If we are interested in a sparse linear model, then we can add a lasso penalty for $\hat{\boldsymbol{\beta}}$. The joint optimization problem is then
-%\begin{equation}
-%\begin{array}{c}
-%\min_{\boldsymbol\lambda \in \mathbb{R}^{p+1}_{+}} \frac{1}{2}
-%\left \|
-%\boldsymbol{y}_V
-%- \boldsymbol{Z}_V\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})
-%- \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda})
-%\right \|^2_2 \\
-%\text{s.t. }
-%\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}),
-%\hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}) =
-%\argmin_{\boldsymbol{\beta}, \boldsymbol{\theta}}
-%\frac{1}{2} \left \|
-%\boldsymbol{y}_T
-%- \boldsymbol{Z}_T \boldsymbol{\beta}
-%- \boldsymbol{I}_T \sum_{i=1}^p \boldsymbol{\theta}^{(i)} \right \|^2_2
-%+ \lambda_0 \| \boldsymbol{\beta} \|_1 \\
-%+ \frac{1}{2} \sum_{i=1}^p \lambda_i \left \| \boldsymbol{D}^{(2)}_{\boldsymbol{x}_i} \boldsymbol{\theta}^{(i)} \right \|_2^2
-%+ \frac{1}{2} \epsilon \left( \| \boldsymbol{\beta} \|_2^2 + \| \boldsymbol{\theta} \|_2^2 \right )
-%\end{array}
-%\label{aplmProblem}
-%\end{equation}
-
-%\subsubsection{Additive Partially Linear Models---OLD}\label{sec:aplm}
-%
-%Now we consider an example from semi-parametric regression: an additive partially linear model (APLM) with Hodrick-Prescott (H-P) filtering for unevenly-spaced inputs and the lasso penalty. In APLMs, the response is modeled as the sum of nonlinear and linear functions.  The combination of H-P filtering and lasso favors models with smooth non-parametric estimates and sparse linear effects.
-%
-%In this example we have a measured a response $y_i$, a vector of ``linearly modeled features'' $\boldsymbol{x}_i$, and a single ``continuously modeled feature'' $z_i$ for each of $i=1,\ldots n$ observations. We believe that $\boldsymbol y$ can be modeled as an additive combination of these features:
-%\begin{equation}
-%\boldsymbol y = \boldsymbol X^\top \boldsymbol{\beta} + g(\boldsymbol z) + \epsilon
-%\end{equation}
-%We want to estimate the coefficients $\boldsymbol{\beta}$ and values of the function $g$ at our observations: $\boldsymbol{\theta} = (\theta_1, ..., \theta_n) \equiv (g(z_1), ..., g(z_n))$.
-%
-%To formalize our optimization problem we give a bit of notation. Let $\boldsymbol{X} \in \mathbb{R}^{n \times p}$ be the design matrix of the $p$ linear predictors, $\boldsymbol{z} \in \mathbb{R}^n$ be the design vector for the nonlinear predictor, and $\boldsymbol{y} \in \mathbb{R}^n$ be the vector of responses. We assume that the observations are ordered such that $z_1 \le z_2 \le \cdots \le z_n$. Let $\boldsymbol{I}_T, \boldsymbol{I}_V$ be a matrices such that the training set $\boldsymbol{X}_T= \boldsymbol{I}_T \boldsymbol{X}$ and the validation set $\boldsymbol{X}_V= \boldsymbol{I}_V \boldsymbol{X}$.
-%
-%Our joint optimization problem is defined as follows:
-%\begin{equation}
-%\begin{array}{c}
-%\min_{\boldsymbol\lambda \in \mathbb{R}^2_{+}} \frac{1}{2}
-%\left \|
-%\boldsymbol{y}_V
-%- \boldsymbol{X}_V\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})
-%- \boldsymbol{I}_V \hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})
-%\right \|^2_2 \\
-%\text{s.t. }
-%\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}),
-%\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda}) =
-%\argmin_{\boldsymbol{\beta}, \boldsymbol{\theta}}
-%\frac{1}{2} \left \|
-%\boldsymbol{y}_T
-%- \boldsymbol{X}_T\boldsymbol{\beta}
-%- \boldsymbol{I}_T \boldsymbol{\theta} \right \|^2_2
-%+ \lambda_1 \| \boldsymbol{\beta} \|_1
-%+ \frac{1}{2} \lambda_2 \| \boldsymbol{D}(\boldsymbol{z}) \boldsymbol{\theta} \|_2^2
-%+ \frac{1}{2} \epsilon \left( \| \boldsymbol{\beta} \|_2^2 + \| \boldsymbol{\theta} \|_2^2 \right )
-%\end{array}
-%\label{aplmProblem}
-%\end{equation}
-%The second penalty in the training criterion $\| \boldsymbol{D}(\boldsymbol{z}) \boldsymbol{\theta} \|_2^2$ is the H-P filter and penalizes second-order differences between the nonparametric estimates of $g(\boldsymbol{z})$. $\boldsymbol{D}(\boldsymbol{z})$ is defined as
-%\begin{equation}
-%\boldsymbol{D}(\boldsymbol{z}) = \boldsymbol{D}^{(1)} \cdot
-%\text{diag} \left ( \frac{1}{z_{2} - z_1}, \frac{1}{z_{3} - z_2}, ... , \frac{1}{z_{n} - z_{n-1}}, 0 \right )
-%\cdot \boldsymbol{D}^{(1)}
-%\end{equation}
-%where
-%\begin{equation}
-%\boldsymbol{D}^{(1)} = 
-%\begin{bmatrix}
-%-1 & 1 & 0 & ... & 0 & 0 \\
-%0 & -1 & 1 & ... & 0 & 0 \\
-%\vdots \\
-%0 & 0 & 0 & ... & -1 & 1 \\
-%0 &0 & 0 &  0  &  0 & 0
-%\end{bmatrix}
-%\in
-%\mathbb{R}^{n\times n}
-%\end{equation}
-%Note that $\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})$ in \eqref{aplmProblem} must include estimates of $g(z_i)$ for  $z_i$ from the validation set. We accomplish this by including $z_i$ values from both training and validation sets in constructing $\boldsymbol{D}(\boldsymbol{z})$.
-%
-%In this example, the lasso is the only penalty which is not everywhere differentiable. Let the nonzero indices of $\hat{\boldsymbol{\beta}}(\boldsymbol\lambda)$ be denoted $I(\boldsymbol\lambda) = \{i | \hat{\beta}_i(\boldsymbol\lambda) \ne 0 \text{ for } i=1,...,p \}$. The differentiable space is then $S_{\boldsymbol{\lambda}} = \boldsymbol C(\boldsymbol I_{I(\boldsymbol\lambda)}) \oplus \mathbb{R}^n$.
-%
-%We now calculate the gradient of the validation loss. Given $I(\boldsymbol \lambda)$, the nonzero set of $\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})$, we define the locally equivalent joint optimization problem as
-%\begin{equation}
-%\begin{array}{c}
-%\min_{\boldsymbol\lambda \in \mathbb{R}^2_{+}} \frac{1}{2}
-%\left \|
-%\boldsymbol{y}_V
-%- \boldsymbol{X}_{V, I(\boldsymbol \lambda)} \hat{\boldsymbol{\eta}}(\boldsymbol{\lambda})
-%- \boldsymbol{I}_V \hat{\boldsymbol{\theta}}(\boldsymbol{\lambda})
-%\right \|^2_2 \\
-%\text{s.t. }
-%\hat{\boldsymbol{\eta}}(\boldsymbol{\lambda}),
-%\hat{\boldsymbol{\theta}}(\boldsymbol{\lambda}) =
-%\argmin_{\boldsymbol \eta, \boldsymbol{\theta}}
-%\frac{1}{2} \left \|
-%\boldsymbol{y}_T
-%- \boldsymbol{X}_{T, I(\boldsymbol \lambda)}\boldsymbol{\eta}
-%- \boldsymbol{I}_T \boldsymbol{\theta} \right \|^2_2
-%+ \lambda_1 \| \boldsymbol{\eta} \|_1
-%+ \frac{1}{2} \lambda_2 \| \boldsymbol{D}(\boldsymbol{z}) \boldsymbol{\theta} \|_2^2
-%+ \frac{1}{2} \epsilon \left( \| \boldsymbol{\eta} \|_2^2 + \| \boldsymbol{\theta} \|_2^2 \right )
-%\end{array}
-%\label{aplmRestricted}
-%\end{equation}
-%As before we can now characterize our solution by setting the gradient of our now-locally-smooth optimization problem to $0$. We then implicitly differentiate this gradient-based characterization and solve for $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\eta}(\boldsymbol{\lambda}) $ and $\frac{\partial}{\partial \boldsymbol \lambda} \hat{\boldsymbol\theta}(\boldsymbol{\lambda})$. We get the following system of equations:
-%\begin{equation}
-%\begin{bmatrix}
-%\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol\theta}(\boldsymbol{\lambda})\\
-%\frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol\eta}(\boldsymbol{\lambda})
-%\end{bmatrix}
-%=
-%\begin{bmatrix}
-%\frac{\partial}{\partial \lambda_1} \hat{\boldsymbol\theta}(\boldsymbol{\lambda}) & \frac{\partial}{\partial \lambda_2} \hat{\boldsymbol\theta}(\boldsymbol{\lambda}) \\
-%\frac{\partial}{\partial \lambda_1} \hat{\boldsymbol\eta}(\boldsymbol{\lambda}) & \frac{\partial}{\partial \lambda_2} \hat{\boldsymbol\eta}(\boldsymbol{\lambda})
-%\end{bmatrix}
-%=
-%-
-%H^{-1}
-%\begin{bmatrix}
-%sgn \left ( \hat {\boldsymbol \eta} (\boldsymbol \lambda) \right ) & \boldsymbol {0}\\
-%\boldsymbol {0} & D^T(\boldsymbol z) D(\boldsymbol z) \hat{\boldsymbol \theta} (\boldsymbol \lambda)
-%\end{bmatrix}
-%\end{equation}
-%
-%By the chain rule, the gradient of the validation loss is
-%\begin{equation*}
-%\nabla_{\boldsymbol{\lambda}} L_V(\boldsymbol{\lambda}) =
-%- \left(
-%\boldsymbol{X}_{V, I(\boldsymbol\lambda)} \frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol\eta}(\boldsymbol{\lambda})
-%+ \boldsymbol{I}_V \frac{\partial}{\partial \boldsymbol{\lambda}} \hat{\boldsymbol\theta}(\boldsymbol{\lambda})
-%\right )^\top
-%\left (
-%\boldsymbol{y}_V
-%- \boldsymbol{X}_{V, I(\boldsymbol\lambda)} \hat{\boldsymbol\eta}(\boldsymbol{\lambda})
-%- \boldsymbol{I}_V \hat{\boldsymbol\theta}(\boldsymbol{\lambda})
-%\right )
-%\end{equation*}
-%
-%\subsubsection{Additive model with heterogeneous smoothness}\label{sec:additive}
-%
-%Finally, consider a nonparametric regression model for response $y$ given $p$ covariates $x_1, ..., x_p$
-%\begin{equation}
-%y = f(x_1, ..., x_p) + \epsilon
-%\end{equation}
-%where $\epsilon$ are independent errors.
-%When $p$ is large, the multivariate function $f$ is difficult to estimate due to the ``curse of dimensionality." The additive model proposed by \citet{buja1989linear} addresses this problem by approximating the multivariate function with $p$ univariate functions
-%\begin{equation}
-%y = \sum_{i=1}^p f_i(x_i) + \epsilon
-%\end{equation}
-%This is also a special case of the PPR (projection pursuit regression) model proposed by Friedman and Stuetzle (1981),  the ALS (alternating least squares) model of van der Burg and de Leeuw (1983) and the ACE (alternating conditional expectation) model of Breiman and Friedman (1985). (rewrite? remove? dunno?)
-%
-%In this example, we fit smooth estimates $\boldsymbol{\theta}_i \in \mathbb{R}^n$ for $f_i(x_{i1}), f_i(x_{i2}), ..., f_i(x_{isn})$ using least squares with a ridge penalty for the second-order differences. Suppose there are a total of $n$ observations, where the first $|T|$ observations are from the training set and the last $|V|$ observations are from the validation set. Accordingly, let $\boldsymbol{I}_T$ as the first $|T|$ rows and $\boldsymbol{I}_V$ as the last $|V|$ rows of an $n\times n$ identity matrix. The joint optimization problem is
-%\begin{equation}
-%\begin{array}{c}
-%\min_{\boldsymbol{\lambda} \in \mathbb{R}^P_+} \frac{1}{2} \left \| y_V - \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}) \right \|^2_2 \\
-%\hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}) = 
-%\min_{\boldsymbol{\theta}^{(i)} \in \mathbb{R}^n} \frac{1}{2} \left \| \boldsymbol{y}_T
-%- \boldsymbol{I}_T \sum_{i=1}^p \boldsymbol{\theta}^{(i)} \right \|^2_2
-%+ \sum_{i=1}^p \lambda_i \left \| \boldsymbol{D}^{(2)}_{\boldsymbol{x}_i} \boldsymbol{\theta}^{(i)} \right \|_2^2
-%+ \epsilon \| \boldsymbol{\theta} \|_2^2
-%\end{array}
-%\end{equation}
-%The matrix $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ gives the second-order differences between the nonparametric estimates of $f_i$. Let the $n$ observations be ordered according to the $i$th covariate such that $x_{ik_1} \le x_{ik_2} \le ... \le x_{ik_n}$. $\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i} \in \mathbb{R}^{n \times n}$ is the corresponding first-order difference matrix; so row $j=1,...,n-1$ of $\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i}$ has a -1 in position $k_{j}$, 1 in position $k_{j+1}$, and 0 elsewhere and row $n$ is all zeros. Then $\boldsymbol{D}^{(2)}_{\boldsymbol{x}_i}$ is
-%\begin{equation}
-%\boldsymbol{D}^{(1)}_{\boldsymbol{x}_i} \cdot
-%\text{diag} \left ( \frac{1}{x_{ik_2} - x_{ik_1}}, \frac{1}{x_{ik_3} - x_{ik_2}}, ... , \frac{1}{x_{ik_n} - x_{ik_{n-1}}}, 0 \right )
-%\cdot \boldsymbol{D}^{(1)}_{\boldsymbol{x}_i}
-%\end{equation}
-%
-%Note that the joint optimization problem gives the general case with tuning parameters $\lambda_1, ..., \lambda_p$. Usually, one combines them into a single regularization parameter $\lambda$ since tuning $p \ge 2$ parameters is computationally intractable. In the simulation studies, we will demonstrate tuning all $p$ parameters.
-%
-%The problem is composed solely of quadratic functions, so the validation loss $L(\boldsymbol {y}_v, \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda}))$ differentiable everywhere with respect to $\boldsymbol{\lambda}$. To calculate the gradient, we perform implicit differentiation with respect to $\lambda_i$ on the KKT conditions for $\{ \hat{\boldsymbol{\theta}_i}(\boldsymbol \lambda) \}_{i=1,..,p}$. We find that
-%\begin{equation}
-%\left (
-%\begin{array}{c}
-%\frac{\partial}{\partial \lambda_i} \hat{\boldsymbol{\theta}}^{(1)}(\boldsymbol \lambda)\\
-%... \\
-%\frac{\partial}{\partial \lambda_i} \hat{\boldsymbol{\theta}}^{(p)}(\boldsymbol \lambda)\\
-%\end{array}
-%\right )
-% =
-%- \boldsymbol{W}^{-1}
-%\left (
-%\begin{array}{c}
-%\boldsymbol{0}\\
-%\boldsymbol{D}^{(2)\top}_{\boldsymbol{x}_i} \boldsymbol{D}^{(2)}_{\boldsymbol{x}_i} \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol \lambda) \\
-%\boldsymbol{0}
-%\end{array}
-%\right )
-%\end{equation}
-%
-%where $\boldsymbol{W}$ is the matrix
-%\begin{equation}
-%\left (
-%\begin{array}{cccc}
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T + \lambda_1 \boldsymbol{D}^{(2)\top}_{\boldsymbol{x}_1} \boldsymbol{D}^{(2)}_{\boldsymbol{x}_1} + \epsilon \boldsymbol{I} &
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T &
-%... &
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T\\
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T &
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T + \lambda_2 \boldsymbol{D}^{(2)\top}_{\boldsymbol{x}_2} \boldsymbol{D}^{(2)}_{\boldsymbol{x}_2} + \epsilon \boldsymbol{I} &
-%... &
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T\\
-%... & ... & ... & ... \\
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T &
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T &
-%... &
-%\boldsymbol{I}_T^\top \boldsymbol{I}_T + \lambda_p \boldsymbol{D}^{(2)\top}_{\boldsymbol{x}_p} \boldsymbol{D}^{(2)}_{\boldsymbol{x}_p} + \epsilon \boldsymbol{I}\\
-%\end{array}
-%\right )
-%\end{equation}
-%
-%By the chain rule, the gradient of the validation loss is then
-%\begin{equation}
-%\nabla_{\lambda_i} L(\boldsymbol y_V, \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)}(\boldsymbol{\lambda})) =
-%- \left (
-%\boldsymbol{I}_V \sum_{i=1}^p \frac{\partial}{\partial \lambda_i} \hat{\boldsymbol{\theta}}^{(i)} (\boldsymbol \lambda)
-%\right )^\top
-%\left (
-%\boldsymbol{y}_V - \boldsymbol{I}_V \sum_{i=1}^p \hat{\boldsymbol{\theta}}^{(i)} (\boldsymbol \lambda)
-%\right )
-%\end{equation}
-
-%\begin{equation}
-%\hat{\theta} = \argmin_{\theta^{(m)} \in \mathbb{R}^n} \frac{1}{2} \| y - \sum_{m=1}^M \theta^{(m)} \|^2_2 + \lambda \sum_{m=1}^M \| D^{(2)}_m \theta^{(m)} \|_2^2
-%\end{equation}
-%where $D^{(2)}_m$ are the second order difference matrices derived from covariates $\boldsymbol{x}_m$.
-%
-%If the functions $f_m$ have very different behaviors (e.g. $f_1$ is linear and $f_2$ is a sinusoid), then one may expect that having a separate penalty parameter for each penalty would result in better model fits. That is, we may be interested in fitting the model
-%\begin{equation}
-%\hat{\theta} = \argmin_{\theta^{(m)} \in \mathbb{R}^n} \frac{1}{2n} \| y - \sum_{m=1}^M \theta^{(m)} \|^2_2 + \sum_{m=1}^M \lambda_m \| D^{(2)}_m \theta^{(m)} \|_2^2
-%\end{equation}
 
 \subsection{Gradient Descent Details}\label{sec:alg_details}
 Here we discuss choice of step size and our convergence criterion.
@@ -851,9 +557,6 @@ L \left( \boldsymbol{y}_V, f_{\hat{\boldsymbol \theta}(\boldsymbol{\lambda}^{(k+
 L \left( \boldsymbol{y}_V, f_{\hat{\boldsymbol \theta}(\boldsymbol{\lambda}^{(k)})}(\boldsymbol{X}_V)\right) \leq \delta
 \]
 for some prespecified tolerance $\delta$. For the results in this manuscript we use $\delta = 1e$-5.
-
-%\subsection{Accelerated Gradient Descent}
-%We also use a modification of Algorithm~\ref{alg:gradDescent} based on the work of \citet{nesterov1983method}. For smooth convex problems, these ``accelerated'' algorithms have faster worst-case convergence than gradient descent (while maintaining the same per-iteration complexity). In practice, these accelerated algorithms often vastly improve performance. In particular, we follow the recipe from \citet{o2013adaptive} which performs adaptive restarts whenever the function value increases. As before, we choose step size using backtracking. We present the exact details in Algorithm~\ref{alg:accGradDescent} included in the Appendix.
 
 \section{Results: regressions with two penalty parameters}\label{sec:results1}\label{results1}
 
@@ -910,8 +613,6 @@ Grid Search & 0.34 (0.003) & 10.74\\
 \hline
 Gradient Descent & 0.34 (0.003) & 4.43 \\
 \hline
-%Nesterov's Gradient Descent & 0.34 (0.003) & 2.28 \\
-%\hline
 \multicolumn{3}{|c|}{Sparse Group Lasso}\\
 \hline
  & Validation Error & Runtime (sec) \\
@@ -919,8 +620,6 @@ Gradient Descent & 0.34 (0.003) & 4.43 \\
 Grid Search & 1.36 (0.09) & 161.29 \\
 \hline
 Gradient Descent  & 1.36 (0.09) & 71.34 \\
-%Nesterov's Gradient Descent  & 1.36 (0.10) & 67.10 \\
-%\hline
 \hline
 \multicolumn{3}{|c|}{APLM}\\
 \hline
@@ -930,18 +629,15 @@ Grid Search  & 1.31 (0.05) & 27.82 \\
 \hline
 Gradient Descent  & 1.31 (0.05) & 16.04 \\
 \hline
-%Nesterov's Gradient Descent  & 1.31 (0.05) & 12.09 \\
-%\hline
 \end{tabular}
 \end{table}
 
 \subsection{Discussion of results}
 As shown in Table \ref{table:validation}, the descent-based joint optimization and grid search have the same average performance in all three regression examples. In regards to computational time, descent-based joint optimization is only slightly faster than grid search. So for regressions with one or two regularization parameters, the two methods have the same performance and do not differ much in terms of runtime.
 
-\section{Results: regressions with $k\ge 2$ penalty parameters}\label{results2}
+\section{Results: regressions with more than two penalty parameters}\label{results2}
 
 In this second simulation study we tested descent-based joint optimization on regressions with more than two regularization parameters. We compared the performance of regressions models fit with $k>2$ penalty terms to that those fit with $k \le 2$ penalty terms.
-%The goal is to determine if descent-based joint optimization is effective in a more complex model space and still run efficiently.
 
 We experimented with generalizations of the simple regressions from the previous section. For the sparse group lasso, we tried an ``un-pooled" version in which each covariate group has its own regularization parameter. For the additive partial linear model example, we added a ridge penalty as a third regularization term. In addition, we consider a special case of the APLM that is completely nonparametric. Joint optimization formulations and gradient derivations for these generalized regression models are in the Appendix.
 
@@ -1053,24 +749,23 @@ APLM 3 & 0.41 & 4.85 & 4.08 & 54.63 \\
 \subsection{Nonparametric Additive Models}
 
 \begin{table}
-\caption {\label{tab:additive} Additive model with three penalty parameters (AM 3) vs. one penalty parameter (AM 1). The parameters were tuned by gradient descent and grid search, respectively. Standard errors are given in parentheses.}
+\caption {\label{tab:additive} Additive model with three penalty parameters (AM 3) vs. one penalty parameter (AM 1). The parameters were tuned by gradient descent and grid search, respectively.}
 \centering
 \begin{tabular}{| l | l | l | l | }
 \hline
 & Validation Error & Test Error & Runtime (sec) \\
 \hline
-AM 3 & 33.97 (1.31) & 38.17 (1.61) & 97.15 \\
+AM 3 & 33.97 & 38.17 & 97.15 \\
 \hline
-AM 1 & 38.93 (1.57) & 42.84 (1.88) & 23.70 \\
+AM 1 & 38.93 & 42.84 & 23.70 \\
 \hline
 \end{tabular}
 \end{table}
 
-Finally, we consider the special case of APLMs where a completely nonparametric model is used for $y$. That is, we suppose that $y$ is the sum of $p$ univariate functions $f_i$, where each is penalized separately with parameter $\lambda_i$. This model is particularly useful when the functions have varying levels of smoothness. Ideally, $\lambda_i$ is large for $f_i$ with nearly constant first-order derivatives and small for $f_i$ with drastically changing first-order derivatives. 
+Finally, we consider the special case of APLMs where a completely nonparametric model is used for $y$. That is, suppose that $y$ is the sum of $p$ univariate functions $f_i$, where each is penalized separately with parameter $\lambda_i$. This model is particularly useful when the functions have varying levels of smoothness. Ideally, $\lambda_i$ is large for $f_i$ with nearly constant first-order derivatives and small for $f_i$ with drastically changing first-order derivatives. 
 
 The simulation settings are as follows. We generated thirty datasets, each with 180 training, 60 validation, and 60 test observations with $p=3$ covariates. Each set of covariates $\boldsymbol{x}_i$ was a random permutation of values $\delta_i - 15 + 0.1 j$ for $j=1,...,300$ where the random variable $\delta_i \sim \mathcal{U}(0, 0.1)$ jitters the start position. The functions are 
 \begin{equation}
-% big_sin, identity_fcn, big_cos_sin
 \begin{array}{ccl}
 f_1(x_1) &=& 9 \sin(2x_1)\\
 f_2(x_2) &=& x_2 \\
